# cardioscar

./: IMPLEMENTATION_NOTES.md  LICENSE  README.md  __init__.py  batch_generate_slices.sh  codebase_context.txt  pyproject.toml
docs/: API_reference.md  REFACTOR_FROM_LEGACY.md
scripts/: README.md  apply_scar_model.py  convert_vtk_slice_to_image.py  prepare_training_data.py  train_on_legacy_data.py  train_scar_model.py
scripts/analysis/: comparison_with_legacy.py
scripts/inspection/: inspect_index_to_physical.py  inspect_real_data.py
scripts/synthetic/: build_foundation_dataset.py  synth_pipeline.py
scripts/utilities/: fix_scan_intensity_normalisation.py  flip_mesh_image_axis.py  generate_slice_planes.py
shell/: run_pipeline_test.sh
src/cardioscar/: cli.py
src/cardioscar/engines/: __init__.py  bayesian_nn.py  loss.py
src/cardioscar/logic/: __init__.py  contracts.py  orchestrators.py  reconstruction.py
src/cardioscar/training/: __init__.py  config.py  trainer.py
src/cardioscar/utilities/: __init__.py  batching.py  io.py  preprocessing.py
tests/integration/: test_vtk_vs_image_consistency.py
tests/unit/: test_bayesian_nn.py
